[package]
name = "editorjs"
version = "0.0.0"
edition = "2024"
authors = ["Whizzes Contributors <developers@whizzes.io>"]
description = "EditorJS Bindings for Rust"
repository = "https://github.com/whizzes/editorjs"
categories = ["web-programming"]
keywords = ["editorjs", "api", "bindings", "wysiwyg", "javascript"]
readme = "README.md"
license = "MIT"

[lib]
name = "editor_js"
path = "src/lib.rs"

[features]
builder = ["dep:rand"]

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

rand = { version = "0.8.5", optional = true }
